--- a/projectcollector_app/templates/projects/detail.html
+++ b/projectcollector_app/templates/projects/detail.html
@@ -1,14 +1,16 @@
 {% extends 'projects/base.html' %}
 {% block content %}
 
-<div>
-    <a href="{% url 'detail' project.id %}">
-        <div>
-            <span>{{ project.name }}</span>
-            <p>Technologies: {{ project.technologies }}</p>
-            <p>Description: {{ project.description }}</p>
-            <p>Live Link: {{ project.live }}</p>
-            <p>Date Created: {{ project.created }}</p>
+<div class="container mx-auto px-4 py-8">
+        <div class="p-6">
+            <h2 class="text-2xl font-bold mb-2">{{ project.name }}</h2>
+            <p class="text-gray-700"><strong>Technologies:</strong> {{ project.technologies }}</p>
+            <p class="text-gray-700"><strong>Description:</strong> {{ project.description }}</p>
+            <p class="text-gray-700">
+                <strong>Live Link:</strong> 
+                <a href="{{ project.live }}" class="text-blue-500 hover:text-blue-700" target="_blank">{{ project.live }}</a>
+            </p>
+            <p class="text-gray-700"><strong>Date Created:</strong> {{ project.created }}</p>
         </div>
     </a>
 </div>
