--- a/projectcollector_app/templates/projects/index.html
+++ b/projectcollector_app/templates/projects/index.html
@@ -10,9 +10,10 @@
 
         {% for project in projects %}
         <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+            <a href="{% url 'detail' project.id %}">
             <div class="p-4">
                 <h2 class="font-bold text-lg mb-2">{{ project.name }}</h2>
-                <p class="text-gray-600"><strong>Technologies:</strong> {{ project.technologies }}</p>
+                <p class="text-gray-600"><strong >Technologies:</strong> {{ project.technologies }}</p>
                 <p class="text-gray-600"><strong>Description:</strong> {{ project.description }}</p>
                 <p class="text-gray-600"><strong>Live Link:</strong> <a href="{{ project.live }}" class="text-blue-500 hover:text-blue-700">{{ project.live }}</a></p>
                 <p class="text-gray-600"><strong>Date Created:</strong> {{ project.date }}</p>
