--- a/projectcollector_app/templates/projects/detail.html
+++ b/projectcollector_app/templates/projects/detail.html
@@ -12,7 +12,10 @@
             </p>
             <p class="text-gray-700"><strong>Date Created:</strong> {{ project.created }}</p>
         </div>
-    </a>
+    <div class="card-action">
+        <a href="{% url 'projects_update' project.id %}">Edit</a>
+        <a href="{% url 'projects_delete' project.id %}">Delete</a>
+    </div>
 </div>
 
 {% endblock %}
