--- a/projectcollector_app/templates/projects/base.html
+++ b/projectcollector_app/templates/projects/base.html
@@ -16,7 +16,7 @@
       <div class="flex justify-between items-center">
         <ul class="flex items-center">
           <li>
-            <a href="/" class="text-blue-500 font-bold text-lg">Portfolio</a>
+            <a href="/" class="text-blue-500 font-bold text-lg">Project Tracker</a>
           </li>
         </ul>
         <ul class="flex items-center">
