--- a/projectcollector_app/templates/projects/index.html
+++ b/projectcollector_app/templates/projects/index.html
@@ -16,7 +16,7 @@
                 <p class="text-gray-600"><strong >Technologies:</strong> {{ project.technologies }}</p>
                 <p class="text-gray-600"><strong>Description:</strong> {{ project.description }}</p>
                 <p class="text-gray-600"><strong>Live Link:</strong> <a href="{{ project.live }}" class="text-blue-500 hover:text-blue-700">{{ project.live }}</a></p>
-                <p class="text-gray-600"><strong>Date Created:</strong> {{ project.date }}</p>
+                <p class="text-gray-600"><strong>Date Created:</strong> {{ project.created }}</p>
             </div>
         </div>
         {% endfor %}
