--- a/projectcollector_app/templates/projects/detail.html
+++ b/projectcollector_app/templates/projects/detail.html
@@ -2,19 +2,19 @@
 {% block content %}
 
 <div class="container mx-auto px-4 py-8">
-        <div class="p-6">
-            <h2 class="text-2xl font-bold mb-2">{{ project.name }}</h2>
-            <p class="text-gray-700"><strong>Technologies:</strong> {{ project.technologies }}</p>
-            <p class="text-gray-700"><strong>Description:</strong> {{ project.description }}</p>
-            <p class="text-gray-700">
-                <strong>Live Link:</strong> 
-                <a href="{{ project.live }}" class="text-blue-500 hover:text-blue-700" target="_blank">{{ project.live }}</a>
-            </p>
-            <p class="text-gray-700"><strong>Date Created:</strong> {{ project.created }}</p>
+    <div class="bg-white p-6 rounded-lg shadow-lg">
+        <h2 class="text-2xl font-bold mb-4">{{ project.name }}</h2>
+        <p class="text-gray-700 mb-2"><strong>Technologies:</strong> {{ project.technologies }}</p>
+        <p class="text-gray-700 mb-2"><strong>Description:</strong> {{ project.description }}</p>
+        <p class="text-gray-700 mb-2">
+            <strong>Live Link:</strong> 
+            <a href="{{ project.live }}" class="text-blue-500 hover:text-blue-700" target="_blank">{{ project.live }}</a>
+        </p>
+        <p class="text-gray-700 mb-4"><strong>Date Created:</strong> {{ project.created|date:"M d, Y" }}</p>
+        <div class="flex justify-start space-x-4">
+            <a href="{% url 'projects_update' project.id %}" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded cursor-pointer">Edit</a>
+            <a href="{% url 'projects_delete' project.id %}" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded cursor-pointer">Delete</a>
         </div>
-    <div class="card-action">
-        <a href="{% url 'projects_update' project.id %}">Edit</a>
-        <a href="{% url 'projects_delete' project.id %}">Delete</a>
     </div>
 </div>
 
