--- a/projectcollector_app/templates/projects/home.html
+++ b/projectcollector_app/templates/projects/home.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="container mx-auto px-4 py-8">
-    <h1 class="text-3xl font-bold text-center mb-6">Welcome to Julianna Bennett's Portfolio!</h1>
+    <h1 class="text-3xl font-bold text-center mb-6">Welcome to Julianna Bennett's Project Tracker!</h1>
 
     <hr class="border-b-2 border-gray-300 mb-6">
 
