--- a/projectcollector_app/templates/projectcollector_app/project_form.html
+++ b/projectcollector_app/templates/projectcollector_app/project_form.html
@@ -5,7 +5,7 @@
   {% if object %}
       <h1 class="text-3xl font-bold text-center mb-6">Edit <span class="text-teal-600">{{ object.name }}</span></h1>
   {% else %}
-      <h1 class="text-3xl font-bold text-center mb-6">Add Cat</h1>
+      <h1 class="text-3xl font-bold text-center mb-6">Add a Project</h1>
   {% endif %}
 
   <form action="" method="POST" class="w-full max-w-2xl mx-auto bg-white p-8 border border-gray-300 rounded-lg shadow-lg">
