--- a/projectcollector_app/templates/projects/detail.html
+++ b/projectcollector_app/templates/projects/detail.html
@@ -58,7 +58,48 @@
         </table>
     </div>
     
+    <hr>
+    <div class="flex flex-col w-full md:w-1/2"> 
+        <h3 class="text-2xl font-semibold">{{ project.name }}'s Tags</h3>
+        {% if project.tags.count %}
+            {% for tag in project.tags.all %}
+                <div class="bg-white shadow-md rounded-lg overflow-hidden mt-4">
+                    <div class="p-5">
+                        <span class="text-xl font-medium">{{ tag.name }}</span>
+                    </div>
+                    <!-- <div class="bg-gray-100 p-4">
+                        <form action="{% url 'assoc_tag' project.id tag.id %}" method="POST">
+                            {% csrf_token %}
+                            <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Add</button>
+                        </form>
+                    </div> -->
+                </div>
+            {% endfor %}
+        {% else %}
+            <h5 class="mt-4 text-gray-600">No Tags Yet!</h5>
+        {% endif %}
+    </div>
     
+    <div class="flex flex-col w-full md:w-1/2"> 
+        <h3 class="text-2xl font-semibold">Available Tags</h3>
+        {% if tags.count %}
+            {% for tag in tags.all %}
+                <div class="bg-white shadow-md rounded-lg overflow-hidden mt-4">
+                    <div class="p-5">
+                        <span class="text-xl font-medium">{{ tag.name }}</span>
+                    </div>
+                    <div class="bg-gray-100 p-4">
+                        <form action="{% url 'assoc_tag' project.id tag.id %}" method="POST">
+                            {% csrf_token %}
+                            <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Add</button>
+                        </form>
+                    </div>
+                </div>
+            {% endfor %}
+        {% else %}
+            <h5 class="mt-4 text-gray-600">{{project.name}} already has all available tags!</h5>
+        {% endif %}
+    </div>
 
 </div>
 
